# YZSK

./: README.md  调研深度学习
final/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
final/main/app/: app_max30102.c  app_max30102.h  app_play_music.c  app_sr.c  app_sr_handler.c  app_uvc_camera.c  app_uvc_camera.h  audio.c  audio.h  http.c  http.h  task_flags.c  task_flags.h  wifi.c  wifi.h
final/main/ui/: ui.c  ui.h
final/main/ui/fonts/: ui_font_Font1.c
final/main/ui/images/: ui_img_1005215284.c  ui_img_left_png.c
final/main/ui/screens/: ui_Screen2.c  ui_Screen5.c  ui_Screen6.c  ui_Screen7.c
final/main/ui1/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
final/main/ui1/fonts/: ui_font_Font1.c  ui_font_FontLast.c
final/main/ui1/images/: ui_img_weather_3_png.c
final/main/ui1/screens/: ui_Screen5.c  ui_Screen6.c  ui_Screen7.c
final/main/ui2/: CMakeLists.txt  filelist.txt  ui.c  ui.h
final/main/ui2/images/: ui_img_403540010.c  ui_img_weather_2_png.c
final/main/ui2/screens/: ui_Screen1.c  ui_Screen6.c  ui_Screen7.c
final/main/ui3/: CMakeLists.txt  ui.c  ui.h  ui_events.c
final/main/ui3/fonts/: ui_font_Font1.c
final/main/ui3/images/: ui_img_1_png.c  ui_img_321964393.c  ui_img_ai_png.c  ui_img_chatbox2_png.c  ui_img_img_202407175155_60x60_png.c  ui_img_logo1_png.c  ui_img_logo2_png.c  ui_img_people_png.c
final/main/ui3/screens/: ui_Screen5.c
final/main/ui4/: filelist.txt  ui.c  ui.h  ui_events.h
final/main/ui4/fonts/: ui_font_Font1.c
final/main/ui4/images/: ui_img_1582379155.c  ui_img_img_202407177275_60x60_png.c  (+3 more)
(+90 files in other folders)
